# ml2code

./: .gitignore  .gitmodules  README.md  demo.py  main.py  pyproject.toml  requirements.txt  venv_setup.sh
examples/: efficientnet.py
ml2code/: __init__.py  clang.py  cli.py  generate.py  models.py  rust.py
templates/clang/: map.yml
templates/clang/test/: main.c.j2  main.c.noweights.j2
templates/rust/: map.yml
templates/rust/test/: Cargo.toml.j2  main.rs.j2  main.rs.noweights.j2
